--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- xxx Change With Your Information xxx -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
+    <meta name="MOON1" content="width=device-width, initial-scale=1.0 user-scalable=no" />
     <title>PetHund - Animals Shop & Veterinary HTML Template</title>
-    <meta name="author" content="Mannat Studio">
-    <meta name="description" content="PetHund is a Responsive HTML5 Template for Animals Shop & Veterinary related services.">
-    <meta name="keywords" content="PetHund, animal care, cats, Dog grooming, dogs, pet, pet care, pet center, pet services, pet shelter, pet shop, shelter, vet clinic, vet store, veterinarian, veterinary">
+    <meta name="Moon2" content="Moon3">
+    <meta name="moon4" content="MOON5">
+    <meta name="Moon6" content=" Moon 7, vet store, veterinarian, veterinary">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
