--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- xxx Change With Your Information xxx -->
-    <meta name="MOON1" content="width=device-width, initial-scale=1.0 user-scalable=no" />
-    <title>PetHund - Animals Shop & Veterinary HTML Template</title>
-    <meta name="Moon2" content="Moon3">
+    <meta name="Description" content="Servicii complete pentru animale de companie" />
+    <title>Moon Veterinary - Servicii Veterinare</title>
+    <meta name="keywords" content="Cabinet veterinar, cabinet, veterinar, animale, doctor, servicii veterinare, animale de companie">
     <meta name="moon4" content="MOON5">
     <meta name="Moon6" content=" Moon 7, vet store, veterinarian, veterinary">
 
@@ -57,13 +57,13 @@
                 <div class="row align-items-center">
                     <div class="col d-flex align-items-center contact-info">
                         <div>
-                            <i data-feather="map-pin"></i> Pet Street 123 - New York
+                            <i data-feather="map-pin"></i> <span></span>Deva - Mihai Eminescu, Bl. B, Sc. D, parter.<span></span>
                         </div>
                         <div>
-                            <i data-feather="mail"></i> <a href="mailto:email@yoursite.com">email@yoursite.com</a>
+                            <i data-feather="mail"></i> <a href="mailto:Alexandra.elena12@yahoo.com">Alexandra.elena12@yahoo.com</a>
                         </div>
                         <div>
-                            <i data-feather="smartphone"></i> <a href="tel:(123)456789">(123) 456-789</a>
+                            <i data-feather="smartphone"></i> <a href="tel:0732287057">0732287057</a>
                         </div>
                     </div>
 
