--- a/index.html
+++ b/index.html
@@ -938,12 +938,12 @@
 
                             <small>Quality & Experience <i class="pethund_repeat_grid"></i></small>
 
-                            <span>Welcome to</span> Pethund
+                            <span>Welcome to</span> Moon Veterinary
 
                         </h1>
 
 
-                        <p>At Pethund, the ambition is that you should always feel welcome both as an advertiser and a visitor. A modern and easy-to-manage page makes it easier for Users to maneuver forward. or then randomised words which don't look even slightly believable you need to be sure there isn't anything embarrassing vestibu lum at eros.</p>
+                        <p>At Moon Veterinary, the ambition is that you should always feel welcome both as an advertiser and a visitor. A modern and easy-to-manage page makes it easier for Users to maneuver forward. or then randomised words which don't look even slightly believable you need to be sure there isn't anything embarrassing vestibu lum at eros.</p>
 
 
                         <ul class="list-unstyled icons-listing theme-green paws fw-7 mt-5 txt-blue">
