--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
 
                         <h1 class="heading-main">
 
-                            <small>Quality & Experience <i class="pethund_repeat_grid"></i></small>
+                            <small>Quality & Experience <i class="Moon Veterinary_repeat_grid"></i></small>
 
                             <span>Welcome to</span> Moon Veterinary
 
@@ -1098,7 +1098,7 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>What we offer for you <i class="pethund_repeat_grid"></i></small>
+                    <small>What we offer for you <i class="Moon Veterinary_repeat_grid"></i></small>
 
                     <span>Our Providing </span> Services
 
@@ -1115,7 +1115,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_petsitting"></i>
+                                <i class="Moon Veterinary_petsitting"></i>
 
                             </div>
 
@@ -1150,7 +1150,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_grooming"></i>
+                                <i class="Moon Veterinary_pet_grooming"></i>
 
                             </div>
 
@@ -1185,7 +1185,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_adoption"></i>
+                                <i class="Moon Veterinary_adoption"></i>
 
                             </div>
 
@@ -1220,7 +1220,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_natural_product"></i>
+                                <i class="Moon Veterinary_natural_product"></i>
 
                             </div>
 
@@ -1255,7 +1255,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_vaccinated"></i>
+                                <i class="Moon Veterinary_vaccinated"></i>
 
                             </div>
 
@@ -1290,7 +1290,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_food"></i>
+                                <i class="Moon Veterinary_pet_food"></i>
 
                             </div>
 
@@ -1359,7 +1359,7 @@
 
                             <h1 class="heading-main light-mode">
 
-                                <small>Get to know us <i class="pethund_repeat_grid"></i></small>
+                                <small>Get to know us <i class="Moon Veterinary_repeat_grid"></i></small>
 
                                 About Us <span class="txt-blue">Few words</span>
 
@@ -1491,7 +1491,7 @@
 
                                 <a href="http://player.vimeo.com/video/7449107" class="popup-video">
 
-                                    <i class="pethund_videoPlay"></i>
+                                    <i class="Moon Veterinary_videoPlay"></i>
 
                                 </a>
 
@@ -1520,7 +1520,7 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>Our perfect staff <i class="pethund_repeat_grid"></i></small>
+                    <small>Our perfect staff <i class="Moon Veterinary_repeat_grid"></i></small>
 
                     <span>Meet Our</span> Groomers
 
@@ -1829,7 +1829,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_belt"></i>
+                                <i class="Moon Veterinary_pet_belt"></i>
 
                             </div>
 
@@ -1856,7 +1856,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_professional"></i>
+                                <i class="Moon Veterinary_pet_professional"></i>
 
                             </div>
 
@@ -1890,7 +1890,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_awards"></i>
+                                <i class="Moon Veterinary_pet_awards"></i>
 
                             </div>
 
@@ -1917,7 +1917,7 @@
 
                             <div class="icon-font">
 
-                                <i class="pethund_pet_salon"></i>
+                                <i class="Moon Veterinary_pet_salon"></i>
 
                             </div>
 
@@ -1959,7 +1959,7 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>Image Tour <i class="pethund_repeat_grid"></i></small>
+                    <small>Image Tour <i class="Moon Veterinary_repeat_grid"></i></small>
 
                     <span>Our</span> Gallery
 
@@ -2106,7 +2106,7 @@
 
                         <h1 class="heading-main center light-mode wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                            <small>What Our Customers Are Saying <i class="pethund_repeat_grid"></i></small>
+                            <small>What Our Customers Are Saying <i class="Moon Veterinary_repeat_grid"></i></small>
 
                             <span>Amazing</span> Feedback
 
@@ -2136,7 +2136,7 @@
 
                                         <div class="quote-icon">
 
-                                            <i class="pethund_quotes"></i>
+                                            <i class="Moon Veterinary_quotes"></i>
 
                                         </div>
 
@@ -2173,7 +2173,7 @@
 
                                         <div class="quote-icon">
 
-                                            <i class="pethund_quotes"></i>
+                                            <i class="Moon Veterinary_quotes"></i>
 
                                         </div>
 
@@ -2208,7 +2208,7 @@
 
                                         <div class="quote-icon">
 
-                                            <i class="pethund_quotes"></i>
+                                            <i class="Moon Veterinary_quotes"></i>
 
                                         </div>
 
@@ -2264,7 +2264,7 @@
 
                 <h1 class="heading-main center">
 
-                    <small>Recent Blog Post <i class="pethund_repeat_grid"></i></small>
+                    <small>Recent Blog Post <i class="Moon Veterinary_repeat_grid"></i></small>
 
                     <span>Latest News </span> & Articles
 
@@ -2667,7 +2667,7 @@
 
                 <div class="col-lg-4 col-md-6 me-auto">
 
-                    <h3 class="footer-heading">About PetHund</h3>
+                    <h3 class="footer-heading">About Moon Veterinary</h3>
 
                     <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
 
@@ -2794,7 +2794,7 @@
 
                 <div class="copyright-text">
 
-                    <div>Copyrights <span id="yearText"></span> <span class="txt-green">PetHund</span> All Rights Reserved.</div>
+                    <div>Copyrights <span id="yearText"></span> <span class="txt-green">Moon Veterinary</span> All Rights Reserved.</div>
 
                     <div>Designed by <a href="https://themeforest.net/user/mannatstudio" rel="nofollow">MannatStudio</a>
 
