--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- xxx Change With Your Information xxx -->
 
-    <meta name="Description" content="Servicii complete pentru animale de companie" />
+    <meta name="Description" content="Servicii complete pen animale de companie" />
 
     <title>Moon Veterinary - Servicii Veterinare</title>
 
