--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                         <div>
 
-                            <i data-feather="map-pin"></i> <span></span>Deva - Mihai Eminescu, Bl. B, Sc. D, parter.<span></span>
+                            <i data-feather="map-pin"></i> <span></span>Deva - Mihaii Eminescu, Bl. B, Sc. D, parter.<span></span>
 
                         </div>
 
