--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name="Description" content="Servicii complete pen animale de companie" />
 
-    <title>Moon Veterinary - Servicii Veterinare</title>
+    <title>Moon Veterinary - Serviciiii Veterinare</title>
 
     <meta name="keywords" content="Cabinet veterinar, cabinet, veterinar, animale, doctor, servicii veterinare, animale de companie">
 
