--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 
                             style="z-index: 8; font-family: 'Changa', sans-serif; min-width : 650px; max-width: 650px; white-space: normal; font-size: 70px; line-height: 70px; font-weight: 400; color: #ffffff; letter-spacing: -2px; font-weight: 700;">
 
-                            We Provide Care, That Your Pet Deserves! </div>
+                            Oferim îngrijirea pe care o merită animalul tău de companie! </div>
 
                     </li>          
 
@@ -820,7 +820,7 @@
 
                             style="z-index: 8; font-family: 'Changa', sans-serif; min-width: 650px; max-width: 650px; white-space: normal; font-size: 70px; line-height: 70px; font-weight: 400; color: #ffffff; letter-spacing: -2px; font-weight: 700;">
 
-                            We Provide Care, That Your Pet Deserves! </div>
+                            Oferim îngrijirea pe care o merită animalul tău de companie! </div>
 
         
 
