--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <!-- xxx Change With Your Information xxx -->
 
-    <meta name="Description" content="Servicii complete pen animale de companie" />
+    <meta name="Description" content="Servicii complete pentru animale de companie" />
 
-    <title>Moon Veterinary - Serviciiii Veterinare</title>
+    <title>Moon Veterinary - Servicii Veterinare</title>
 
     <meta name="keywords" content="Cabinet veterinar, cabinet, veterinar, animale, doctor, servicii veterinare, animale de companie">
 
