--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
 
                             <small>Quality & Experience <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                            <span>Welcome to</span> Moon Veterinary
+                            <span>Bine ați venit la</span> Moon Veterinary
 
                         </h1>
 
