--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                         </h1>
 
 
-                        <p>At Moon Veterinary, the ambition is that you should always feel welcome both as an advertiser and a visitor. A modern and easy-to-manage page makes it easier for Users to maneuver forward. or then randomised words which don't look even slightly believable you need to be sure there isn't anything embarrassing vestibu lum at eros.</p>
+                        <p>La Moon Veterinary, ambiția noastră este ca întotdeauna să vă simțiți bineveniți, atât în calitate de client, cât și de vizitator. O pagină modernă și ușor de utilizat face mai ușor pentru utilizatori să navigheze mai departe. Pentru a evita orice conținut aleatoriu sau care nu pare credibil, ne asigurăm că nu există nimic stânjenitor.</p>
 
 
                         <ul class="list-unstyled icons-listing theme-green paws fw-7 mt-5 txt-blue">
