--- a/index.html
+++ b/index.html
@@ -948,11 +948,11 @@
 
                         <ul class="list-unstyled icons-listing theme-green paws fw-7 mt-5 txt-blue">
 
-                            <li>Abore et dolore magna aliqua ut enim veniam</li>
+                            <li>Din dragoste și dedicare profundă, cu scopul de a oferi îngrijire excepțională și de a răspunde nevoilor dumneavoastră</li>
 
-                            <li>Quis nostrud exercitation ullamco laboris nisi aliquip</li>
+                            <li>Care își oferă serviciile cu profesionalism, asigurându-se că fiecare nevoie este îndeplinită cu grijă și dedicație</li>
 
-                            <li>Eiusmod tempor incididunt labore.</li>
+                            <li>Servicii de calitate, oferite cu profesionalism și dedicare, pentru a răspunde cerințelor tale.</li>
 
                         </ul>
 
