--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
 
                             <a href="contact-us.html" class="btn-theme bg-orange capusle bordered me-4"><span
 
-                                    class="txt-white">Contact us</span></a>
+                                    class="txt-white">Contactați-ne</span></a>
 
                             <a href="tel:(+44)123456789">0732 287 057</a>
 
@@ -1087,7 +1087,7 @@
         <!-- Callout Section Solid Background -->
 
 
-        <!-- Our Providing Services Start -->
+        <!-- Serviciile noastre oferite Start -->
 
         <section class="wide-tb-150">
 
@@ -1095,7 +1095,7 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>What we offer for you <i class="Moon Veterinary_repeat_grid"></i></small>
+                    <small>Ce vă oferim<i class="Moon Veterinary_repeat_grid"></i></small>
 
                     <span>Our Providing </span> Services
 
@@ -1118,7 +1118,7 @@
 
                             <div class="text">
 
-                                <h3>Pet Sitting</h3>
+                                <h3>Îngrijire pentru animale de companie</h3>
 
                                 <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
 
@@ -1126,7 +1126,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1161,7 +1161,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1196,7 +1196,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1231,7 +1231,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1266,7 +1266,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1301,7 +1301,7 @@
 
                                 <a href="services-single.html" class="read-more-arrow">
 
-                                    Read More <span> <i class="icofont-simple-right"></i></span>
+                                    Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                                 </a>
 
@@ -1329,7 +1329,7 @@
 
         </section>
 
-        <!-- Our Providing Services End -->
+        <!-- Serviciile noastre oferite End -->
 
 
         <!-- Get to know us Start -->
@@ -1365,7 +1365,7 @@
 
                             <p class="mb-4">
 
-                                Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum convall.
+                                Cu soluții adaptate nevoilor tale, transformăm fiecare interacțiune într-o experiență remarcabilă. Lasă-ne să îți arătăm cum perfecțiunea poate fi atinsă prin detalii atent gândite și implementate. convall.
 
                             </p>
 
@@ -1557,7 +1557,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -1600,7 +1600,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -1643,7 +1643,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -1686,7 +1686,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -1729,7 +1729,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -1772,7 +1772,7 @@
 
                             <a href="team-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2308,7 +2308,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2354,7 +2354,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2400,7 +2400,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2446,7 +2446,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2492,7 +2492,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
@@ -2538,7 +2538,7 @@
 
                             <a href="blog-single.html" class="read-more-arrow">
 
-                                Read More <span> <i class="icofont-simple-right"></i></span>
+                                Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
                             </a>
 
