--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
             <div class="container text-nowrap">
 
-                <div class="d-flex align-items-center w-100 col p-0 logo-brand">
+                <div class="d-flex align-items-center w-100 col p-0 Logo1-brand">
 
                     <a class="navbar-brand rounded-bottom light-bg" href="index.html">
 
-                        <img src="assets/images/logo_white.svg" alt="">
+                        <img src="assets/images/Logo1_white.svg" alt="">
 
                     </a>
 
@@ -200,13 +200,13 @@
 
                 <div class="navbar-collapse offcanvas offcanvas-start offcanvas-collapse" id="navbarCollapse">
 
-                    <!-- Mobile Logo -->
+                    <!-- Mobile Logo1 -->
 
                     <div class="offcanvas-header">
 
-                        <a href="index.html" class="logo-small">
+                        <a href="index.html" class="Logo1-small">
 
-                            <img src="assets/images/logo_white.svg" alt="">
+                            <img src="assets/images/Logo1_white.svg" alt="">
 
                         </a>     
 
@@ -220,7 +220,7 @@
 
                     </div>
 
-                    <!-- Mobile Logo -->
+                    <!-- Mobile Logo1 -->
 
                     <!-- Mobile Menu -->
 
@@ -2628,9 +2628,9 @@
 
                 <div class="col-md-6 mb-0">
 
-                    <div class="logo-footer">
+                    <div class="Logo1-footer">
 
-                        <img src="assets/images/logo_white.svg" alt="">
+                        <img src="assets/images/Logo1_white.svg" alt="">
 
                     </div>
 
