--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                         <div class="social-icons">
 
-                            <span>We are social</span>
+                            <span>Suntem prezenți pe rețelele sociale</span>
 
                             <a href="#"><i data-feather="facebook"></i></a>
 
@@ -169,7 +169,7 @@
 
                 <div class="d-inline-flex order-lg-last col-auto align-items-center ps-lg-3">
 
-                    <a href="#" class="btn-theme bg-green btn-shadow d-none d-sm-block">Doneaza</a>
+                    <a href="#" class="btn-theme bg-green btn-shadow d-none d-sm-block">Programare Online</a>
 
                     <a class="nav-link ml-auto stop-lenis" href="#" id="Magazinping-bag"  data-bs-toggle="offcanvas" data-bs-target="#card_mobile" data-lenis-stop><i data-feather="Magazinping-bag"></i> <span class="badge badge-success">0</span></a>
 
@@ -648,7 +648,7 @@
 
                             style="z-index: 7; white-space: normal; font-size: 20px; line-height: 20px; font-weight: 400; color: #ffffff; font-family:Karla', sans-serif;">
 
-                            Pet Care Services, in New York City </div>
+                            Servicii de îngrijire pentru animale de companie, în Deva </div>
 
         
 
@@ -858,7 +858,7 @@
 
                             style="z-index: 7; text-align: center !important;  white-space: normal; font-size: 20px; line-height: 20px; font-weight: 400; color: #ffffff; font-family:Karla', sans-serif;">
 
-                            Pet Care Services, in New York City </div>
+                            Servicii de îngrijire pentru animale de companie, în Deva </div>
 
         
 
@@ -918,7 +918,7 @@
     <main id="body-content">
 
 
-        <!-- Quality & Experience Start -->
+        <!-- Calitate și ExperiențăStart -->
 
         <section class="wide-tb-150">
 
@@ -936,7 +936,7 @@
 
                         <h1 class="heading-main">
 
-                            <small>Quality & Experience <i class="Moon Veterinary_repeat_grid"></i></small>
+                            <small>Calitate și Experiență<i class="Moon Veterinary_repeat_grid"></i></small>
 
                             <span>Bine ați venit la</span> Moon Veterinary
 
@@ -957,7 +957,7 @@
                         </ul>
 
 
-                        <a href="about.html" class="btn-theme bg-navy-blue capusle mt-4 wow fadeInDown">Discover More</a>                        
+                        <a href="about.html" class="btn-theme bg-navy-blue capusle mt-4 wow fadeInDown">Descoperă mai mult</a>                        
 
                     </div>
 
@@ -967,7 +967,7 @@
 
         </section>
 
-        <!-- Quality & Experience End -->
+        <!-- Calitate și ExperiențăEnd -->
 
 
         <!-- Callout Section Solid Background -->
@@ -990,9 +990,9 @@
 
                                 <i class="icofont-paw"></i>
 
-                                <h3>We Heal</h3>
+                                <h3>Vindecăm</h3>
 
-                                <div>Quick Veterinary Services</div>
+                                <div>Servicii veterinare rapide</div>
 
                             </div>
 
@@ -1015,9 +1015,9 @@
 
                                 <i class="icofont-paw"></i>
 
-                                <h3>Our Mission</h3>
+                                <h3>Misiunea noastră</h3>
 
-                                <div>Offer quick & easy services</div>
+                                <div>Oferim servicii rapide și ușor de accesat</div>
 
                             </div>
 
@@ -1120,7 +1120,7 @@
 
                                 <h3>Îngrijire pentru animale de companie</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1153,9 +1153,9 @@
 
                             <div class="text">
 
-                                <h3>Pet Grooming</h3>
+                                <h3>Îngrijire pentru animale de companie</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1188,9 +1188,9 @@
 
                             <div class="text">
 
-                                <h3>Pet Adoption</h3>
+                                <h3>Adopție de animale de companie</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1223,9 +1223,9 @@
 
                             <div class="text">
 
-                                <h3>Natural Products</h3>
+                                <h3>Produse naturale</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1258,9 +1258,9 @@
 
                             <div class="text">
 
-                                <h3>Pet Vaccination</h3>
+                                <h3>accinarea animalelor de companie</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1293,9 +1293,9 @@
 
                             <div class="text">
 
-                                <h3>Pet Foods</h3>
+                                <h3>Alimente pentru animale de companie</h3>
 
-                                <p>Aliquam erat volutpat In id fermentum augue, ut pellentesque leo. Maecenas at arcu
+                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
 
                                     risus. </p>
 
@@ -1316,7 +1316,7 @@
 
                     <div class="text-center wow fadeInUp col-md-12" data-wow-duration="0" data-wow-delay="0s">                    
 
-                        <a href="our-services.html" class="btn-theme bordered capusle bg-navy-blue">View All Services</a>
+                        <a href="our-services.html" class="btn-theme bordered capusle bg-navy-blue">Vezi toate serviciile</a>
 
                     </div>
 
@@ -2209,11 +2209,7 @@
 
                                         </div>
 
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-
-                                            Consonantia, there live the blind texts. Aliquam gravida, urna quis ornare
-
-                                            imperdiet, </p>
+                                        <p>Departe, dincolo de munții cuvintelelor </p>
 
                                         <div
 
@@ -2640,7 +2636,7 @@
 
                     <div class="social-icons d-flex justify-content-md-end align-items-center">
 
-                        We are social
+                        Suntem prezenți pe rețelele sociale
 
                         <ul class="list-unstyled list-group list-group-horizontal">
 
