--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
 
                     <small>Ce vă oferim<i class="Moon Veterinary_repeat_grid"></i></small>
 
-                    <span>Our Providing </span> Services
+                    <span>Ce vă oferim</span> 
 
                 </h1>
 
