--- a/index.html
+++ b/index.html
@@ -1120,9 +1120,7 @@
 
                                 <h3>Îngrijire pentru animale de companie</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
@@ -1155,9 +1153,7 @@
 
                                 <h3>Îngrijire pentru animale de companie</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
@@ -1190,9 +1186,7 @@
 
                                 <h3>Adopție de animale de companie</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
@@ -1225,9 +1219,7 @@
 
                                 <h3>Produse naturale</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
@@ -1260,9 +1252,7 @@
 
                                 <h3>accinarea animalelor de companie</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
@@ -1295,9 +1285,7 @@
 
                                 <h3>Alimente pentru animale de companie</h3>
 
-                                <p>otul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. Maecenas la arcu risus, cu servicii care sunt atent adaptate cerințelor tale.ellentesque leo. Maecenas at arcu
-
-                                    risus. </p>
+                                <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
                                 <a href="services-single.html" class="read-more-arrow">
 
