--- a/index.html
+++ b/index.html
@@ -1060,9 +1060,7 @@
 
                     <div class="col-sm-10 mx-auto text-center txt-white">
 
-                        <p>Maecenas at arcu risus. Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In
-
-                            aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum.
+                        <p>Oferim soluții complete și eficiente pentru nevoile tale. Fiecare detaliu este gândit pentru a-ți oferi confortul dorit, cu servicii de calitate superioară, adaptate cerințelor tale.
 
                         </p>
 
