--- a/index.html
+++ b/index.html
@@ -997,6 +997,23 @@
                             </div>
 
                         </div>
+ <!-- Image Box Gradient -->
+
+                        <div class="gdr-img-box bg-green">
+
+                            <img src="assets/images/gdr_img_1.jpg" alt="" class="ms-auto d-flex">
+
+                            <div class="info-text">
+
+                                <i class="icofont-paw"></i>
+
+                                <h3>Doctor Dancila Alexandra</h3>
+
+                                <div>Servicii veterinare rapide</div>
+
+                            </div>
+
+                        </div>
 
                         <!-- Image Box Gradient -->
 
